# pytswap

./: .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  app.py  pyproject.toml
.github/workslows/: ci.yml
assets/: empty_48_128.map  empty_48_128.scen
notebooks/: demo.ipynb  pattern_geenrator.ipynb
src/pytswap/: __init__.py  mapf_utils.py  tswap.py
tests/: test_tswap.py
